@@ -1,45 +1,3 @@
-# Source code for the paper "Low-Latency, High-Throughput Garbage Collection", PLDI 2022.
-
-This is the LXR branch of MMTk.
-
-**Please check [github.com/wenyuzhao/mmtk-core/tree/lxr](https://github.com/wenyuzhao/mmtk-core/tree/lxr) for the latest implementation.**
-
-**Please refer to [github.com/wenyuzhao/lxr-pldi-2022-artifact](https://github.com/wenyuzhao/lxr-pldi-2022-artifact) for detailed instructions to reproduce the results in the paper.**
-
-## Run Latext LXR
-
-LXR's command line arguments have changed significantly since its initial release. Here are the minimal flags required to run the latest version of LXR:
-
-```bash
-./jdk-11.0.19/bin/java -XX:+UseThirdPartyHeap -XX:ThirdPartyHeapOptions=plan=LXR -Xms100M -Xmx100M  -version
-```
-
-Please always specify `-Xms` and `-Xmx` and make sure the values are the same. LXR does not support variable heap sizes right now.
-
-## Getting started
-
-1. Clone [mmtk-core](https://github.com/wenyuzhao/mmtk-core) and [mmtk-openjdk](https://github.com/wenyuzhao/mmtk-openjdk). Checkout the _lxr_ branch for both repos.
-2. Change the _mmtk-core_ dependency in _mmtk-openjdk/mmtk/Cargo.toml_ to point to your clone of mmtk-core.
-3. Under _mmtk-openjdk/repos/openjdk_ directory:
-   1. Configure OpenJDK: `sh configure --disable-warnings-as-errors --with-debug-level=release --with-target-bits=64 --disable-zip-debug-info --with-jvm-features=shenandoahgc`
-   2. Build OpenJDK with MMTk: `GC_FEATURES=lxr make --no-print-directory CONF=linux-x86_64-normal-server-release THIRD_PARTY_HEAP=$PWD/../../openjdk`
-      * Please try again if running into any errors.
-4. To run any java program, e.g. _Hello.class_, please run `MMTK_PLAN=Immix ./mmtk-openjdk/repos/openjdk/build/linux-x86_64-normal-server-release/jdk/bin/java -XX:MetaspaceSize=1G -XX:-UseBiasedLocking -XX:-TieredCompilation -XX:+UnlockDiagnosticVMOptions -XX:-InlineObjectCopy -Xms100M -Xmx100M -XX:+UseThirdPartyHeap Hello`.
-
-## Reproducibility
-
-* **Please refer to [github.com/wenyuzhao/lxr-pldi-2022-artifact](https://github.com/wenyuzhao/lxr-pldi-2022-artifact) for detailed instructions to reproduce the results in the paper.**
-* The commit for running the camera-readly paper results is https://github.com/wenyuzhao/mmtk-core/tree/lxr-pldi-2022
-  * To build LXR on this commit, please modify the environment variable to `GC_FEATURES=lxr,lxr_heap_health_guided_gc`
-  * Please also modify the runtime environment variables to `MMTK_PLAN=Immix TRACE_THRESHOLD2=10 LOCK_FREE_BLOCKS=32 MAX_SURVIVAL_MB=256 SURVIVAL_PREDICTOR_WEIGHTED=1`
-* Please note that the hardware differences can greatly affect the results.
-
----
-
----
-
----
-
 # MMTk
 
 [![crates.io](https://img.shields.io/crates/v/mmtk.svg)](https://crates.io/crates/mmtk)
@@ -164,7 +122,7 @@ MMTk uses a pinned Rust version in the repository (recorded in the `rust-toolcha
 our tests and benchmarks using the pinned Rust version. We recommend using the pinned Rust version
 for development. We update the pinned Rust version between releases of mmtk-core to keep it close to
 the latest Rust stable release. The release cycle of mmtk-core is six weeks, roughly the same as
-Rust itself. 
+Rust itself.
 
 Our minimum support Rust version (MSRV) policy is "N-1" (note that N is *NOT* the current stable Rust release).  That means we also ensure mmtk-core works
 properly with the Rust toolchain that is one minor version before the version specified in
